fixed layout issue with Safari

--- a/cpan-prc.css
+++ b/cpan-prc.css
@@ -31,6 +31,7 @@ div.topic {
     max-height: 175px;
     height: 175px;
     overflow: hidden;
+    vertical-align: top;
 }
 
 a {
